syntax = "proto3";
package product;

option go_package = "/product_pb";

message Product {
  string product_name = 1;
  string tag = 2;
  float price = 3;

}

message ProductRequest {
  Product product = 1;
}

message ProductResponse {
  string result = 1;
}
message ReceiveProduct {
  string product_name = 1;
}


service ProductService {
  rpc CreateProduct(ProductRequest)returns (ProductResponse){};
  rpc GetProduct(ReceiveProduct) returns (Product){};
}

